# naive_driving_agent

./: .gitignore  LICENSE  README.md  agent.py  carla_utils.py  config.py  config.yaml  dataset.py  generate_episodes.py  model.py  pyproject.toml  sweep.yaml  train.py
configs/: experiment_1_direct_control.yaml  experiment_2_tp_no_noise_no_ignore_vision.yaml  experiment_3_noise_bottleneck.yaml  experiment_4a_ignore_vision_zero_vec.yaml  experiment_4b_ignore_vision_random_vec.yaml  experiment_5a_only_vision.yaml  experiment_5b_only_tp.yaml  experiment_6a_exclude_town_2_and_5.yaml
idun/: queue_sweep_agents.bash  requirements.txt  setup.bash  sweep_agent.slurm  sync_repo_to_idun.bash  train.slurm
scripts/: create_eval_video.py  deprecated_setup_ubuntu22.bash  evaluate.bash  generate_data.bash  generate_data_and_train.bash  setup_ubuntu22.bash
src/: agent.py  agent_utils.py  carla_utils.py  config.py  controller.py  datagen_agent.py  dataset.py  driving_model.py  episode.py  eval_agent.py  generate_episodes.py  loss.py  model.py  simple_controller.py  torch_datasets.py  train.py
typings/carla/: README.md
